...

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/ingredient_add_top_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingredient_add_text_layout_description"
                style="@style/Theme.FoodBit.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ingredient_add_edit_text_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingredient_add_text_layout_best_before"
                style="@style/Theme.FoodBit.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ingredient_add_edit_text_best_before"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingredient_add_text_layout_location"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
...

                <AutoCompleteTextView
                    android:id="@+id/location_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingredient_add_text_layout_amount"
                style="@style/Theme.FoodBit.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ingredient_add_edit_text_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingredient_add_text_layout_unit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
...

                <AutoCompleteTextView
                    android:id="@+id/unit_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingredient_add_text_layout_category"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
...

                <AutoCompleteTextView
                    android:id="@+id/category_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
