<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ingredient_add"
        android:icon="@drawable/ic_add_top"
        android:title="AddIngredient"
        app:showAsAction = "ifRoom"
        />

    <item
        android:id="@+id/filter1"
        android:title="Sort by: Description"
        app:showAsAction = "never"
        >
        <menu>
            <item
                android:id="@+id/descriptionFilter1"
                android:title="Ascending(A-Z)"/>
            <item
                android:id="@+id/descriptionFilter2"
                android:title="Descending(Z-A)"/>

        </menu>
    </item>

    <item
        android:id="@+id/filter2"
        android:title="Sort by: Best Before Date"
        app:showAsAction = "never">
        <menu>
            <item
                android:id="@+id/dateFilter1"
                android:title="Expiring Soon"/>
            <item
                android:id="@+id/dateFilter2"
                android:title="Expiring Later"/>

        </menu>
    </item>

    <item
        android:id="@+id/filter3"
...
